Refactor tests and service implementations for improved readability and maintainability
- Introduced constants for repeated string values in AuditTrailServiceTest.
- Replaced hardcoded UUID strings with constants in PersonServiceContractBehaviorIT and CommunicationPreferenceServiceContractBehaviorIT.
- Updated method calls to use constants in PaymentApplicationServiceTest.
- Changed Math.min/max to Math.clamp in ProductSearchServiceImpl for better clarity.
- Cleaned up imports in InventoryPermissionInitializer and PickListServiceImpl.
- Enhanced readability in ContractBehaviorIT by reformatting test cases and ensuring consistent use of UUIDs.
- Simplified assertions and request creation in PurchaseOrderServiceImplTest.